--- a/Bipolar.html
+++ b/Bipolar.html
@@ -163,7 +163,7 @@
         </div>
 
         <div class="button-container">
-            <a href="blogs.html"><button class="back-button" onclick="goBack()">Back</button></a>
+            <a href="./blogs.html"><button class="back-button" onclick="goBack()">Back</button></a>
             <button onclick="calculateScore()">Submit</button>
         </div>
         
