--- a/SocialAnxietyAnalysis.html
+++ b/SocialAnxietyAnalysis.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="button-container">
-            <button class="back-button"><a href="blogs.html">Back</a></button>
+            <button class="back-button"><a href="./blogs.html">Back</a></button>
             <button onclick="calculateScore()">Submit</button>
         </div>
         
