--- a/Resources.html
+++ b/Resources.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="./style1.css">
 </head>
 <body>
     <!-- Header Section for Website Name and Logo -->
@@ -99,6 +99,6 @@
     <footer class="footer">
         &copy; 2025 MindEd. All rights reserved.
     </footer>
-    <script src="script1.js"></script>
+    <script src="./script1.js"></script>
 </body>
 </html>
