--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="blogs.css">
+    <link rel="stylesheet" href="./blogs.css">
 </head>
 <body>
     <nav class="navbar">
@@ -124,6 +124,6 @@
     <footer class="footer">
         &copy; 2025 MindEd. All rights reserved.
     </footer>
-    <script src="blogs.js"></script>
+    <script src="./blogs.js"></script>
 </body>
 </html>
