--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="./contact.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -176,6 +176,6 @@
 <script>
   
 </script>
-    <script src="contact.js"></script>
+    <script src="./contact.js"></script>
 </body>
 </html>
